# fractalbits-main

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
api_server/: Cargo.toml  build.rs
api_server/benches/bench_from_http_client/: Cargo.toml
api_server/benches/bench_from_http_client/src/: main.rs
api_server/benches/rewrk/: Cargo.toml
api_server/benches/rewrk/src/: bench.rs  main.rs
api_server/benches/rewrk_rpc/: Cargo.toml
api_server/benches/rewrk_rpc/src/: bench.rs  main.rs
api_server/bucket_tables/: Cargo.toml
api_server/bucket_tables/src/: api_key_table.rs  bucket_table.rs  table.rs
api_server/kv_client_traits/: Cargo.toml
api_server/kv_client_traits/src/: lib.rs
api_server/rpc_client/: Cargo.toml  build.rs
api_server/rpc_client/bss/: Cargo.toml
api_server/rpc_client/bss/src/: lib.rs  message.rs  rpc.rs
api_server/rpc_client/bss/tests/: blob_io.rs
api_server/rpc_client/common/: codec.rs  message.rs  rpc_client.rs
api_server/rpc_client/nss/: Cargo.toml
api_server/rpc_client/nss/src/: message.rs  rpc.rs
api_server/rpc_client/rss/: Cargo.toml
api_server/rpc_client/rss/src/: lib.rs  rpc.rs
api_server/rpc_client/rss/tests/: bucket_ops.rs
api_server/rpc_client/src/: lib.rs  message.rs  nss.rs  storage_server.rs
api_server/rpc_client/src/proto/: storage_server_ops.proto
api_server/rpc_client/storage_server/: Cargo.toml
api_server/rpc_client/storage_server/src/: message.rs  storage_server.rs
api_server/slotmap_conn_pool/: Cargo.toml
api_server/slotmap_conn_pool/src/: lib.rs
api_server/src/: api_key_routes.rs  blob_client.rs  blob_storage.rs  bucket_tables.rs  cache_mgmt.rs  config.rs  connection.rs  extract.rs  frame.rs  handler.rs  lib.rs  main.rs  message.rs  object_layout.rs  router.rs  rpc_client.rs  ws_client.rs
api_server/src/blob_storage/: bss_only_single_az_storage.rs  data_vg_proxy.rs  hybrid_single_az_storage.rs  s3_express_multi_az_storage.rs  s3_express_multi_az_with_tracking.rs  s3_express_single_az_storage.rs  s3_express_storage.rs  s3_hybrid_single_az_storage.rs
api_server/src/bucket_tables/: api_key_table.rs  bucket_table.rs  table.rs
api_server/src/handler/: bucket.rs  common.rs  delete.rs  endpoint.rs  extract_bucket_name.rs  get.rs  head.rs  mpu.rs  post.rs  put.rs  session.rs  time.rs
api_server/src/handler/bucket/: create_bucket.rs  delete_bucket.rs  head_bucket.rs  list_buckets.rs
api_server/src/handler/common/: checksum.rs  data.rs  encoding.rs  s3_error.rs  signature.rs
api_server/src/handler/delete/: abort_multipart_upload.rs  delete_object.rs  delete_objects.rs
api_server/src/handler/get/: get_object.rs  get_object_attributes.rs  list_multipart_uploads.rs  list_objects.rs  list_objects_v2.rs  list_parts.rs
api_server/src/handler/head/: head_object.rs
api_server/src/handler/list/: list_multipart_uploads.rs  list_objects_v2.rs  list_parts.rs
api_server/src/handler/mpu/: abort_multipart_upload.rs  complete_multipart_upload.rs  create_multipart_upload.rs  upload_part.rs
api_server/src/handler/post/: complete_multipart_upload.rs  create_multipart_upload.rs  delete_objects.rs
api_server/src/handler/put/: block_data_stream.rs  copy_object.rs  put_object.rs  rename_folder.rs  rename_object.rs  s3_streaming.rs  upload_part.rs
api_server/src/proto/: nss_ops.proto
api_server/src/utils/: mod.rs
api_server/tests/: basic.rs  checksums.rs  common.rs  list.rs  multi_az_resilience.rs  multipart.rs  objects.rs
crates/common/rpc_clients/rss/: Cargo.toml
crates/common/volume_group_proxy/: Cargo.toml
crates/common/volume_group_proxy/src/: data_vg_proxy.rs  lib.rs  metadata_vg_proxy.rs
xtask/: Cargo.toml
xtask/common/src/: lib.rs
xtask/src/: build.rs  cmd_bench.rs  cmd_build.rs  cmd_deploy.rs  cmd_docker.rs  cmd_git.rs  cmd_nightly.rs  cmd_prebuilt.rs  cmd_precheckin.rs  cmd_repo.rs  cmd_run_tests.rs  cmd_service.rs  cmd_tool.rs  etcd_utils.rs  main.rs
xtask/src/cmd_deploy/: bootstrap.rs  build.rs  common.rs  create_cluster.rs  upload.rs  vpc.rs
xtask/src/cmd_run_tests/: bss_node_failure.rs  leader_election.rs  multi_az.rs  nss_ha_failover.rs
xtask/src/cmd_run_tests/multi_az/: data_blob_resyncing.rs  (+1 more)
xtask/tools/: Cargo.toml
xtask/tools/src/: lib.rs
(+220 files in other folders)
