[package]
name = "api_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["protobuf"] }
base64 = "0.22.1"
sha-1 = "0.10.1"
tokio = { version = "1.39.2", features = ["full"] }
tracing-subscriber = "0.3.18"
web-socket = "0.7.0"
prost = "0.13"
# to debug protobuf as json
prost-wkt = "0.6"
prost-wkt-types = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.125"

[build-dependencies]
prost-build = "0.13"
prost-wkt-build = "0.6"
