[package]
name = "rpc_client_bss"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.39.2", features = ["full"] }
bytes = "1.7.1"
thiserror = "1.0.63"
tracing = "0.1.40"
bytemuck = { version = "1.18.0", features = ["derive"] }
tokio-util = { version = "0.7.12", features = ["codec"] }
tokio-stream = "0.1.16"
uuid = { version = "1.11.0", features = ["v7"] }

[features]
default = ["bss"]
bss = []
nss = []

[dev-dependencies]
tracing-test = {version = "0.2.5", features = ["no-env-filter"]}
