[package]
name = "rpc_client_rss"
version = "0.1.0"
edition = "2024"

[features]
metrics = ["metrics_wrapper/metrics", "dep:metrics"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
prost.workspace = true
bytes.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio-stream.workspace = true
metrics_wrapper.workspace = true
metrics = { workspace = true, optional = true }
metrics-exporter-statsd.workspace = true
tokio-retry.workspace = true
parking_lot.workspace = true
strum.workspace = true
rpc_client_common.workspace = true
socket2.workspace = true
rss_codec.workspace = true
rpc_codec_common.workspace = true
data_types.workspace = true
rand.workspace = true

[dev-dependencies]
tracing-test.workspace = true
